workshop/01_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: api
        image: netlight/kubernetes-workshop-example:latest
        ports:
          - name: http
            containerPort: 8080
