workshop/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  labels:
    app: hello-kubernetes
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: hello-kubernetes
