workshop/03_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-app.eks-workshop.edge-labs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-app
          servicePort: http
